feat: use ZGC, JEMALLOC and colorise log file
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>